# datastar-rust

./: Cargo.toml  Makefile  README.md
.github  /    workflows  /: sync-monorepo.yml
.github/workflows/: CI.yml  PULL_REQUEST_TEMPLATE.md  close-pull-request.yml  sync-monorepo.yml
examples/: activity-feed.html  axum-activity-feed.rs  axum-hello.rs  axum-live-reload.rs  axum-test-suite.rs  hello-world-channel.html  hello-world.html  rocket-hello-channel.rs  rocket-hello.rs  warp-activity-feed.rs  warp-hello.rs  warp-test-suite.rs
src/: axum.rs  consts.rs  execute_script.rs  lib.rs  merge_fragments.rs  merge_signals.rs  patch_elements.rs  patch_signals.rs  remove_fragments.rs  remove_signals.rs  rocket.rs  testing.rs  warp.rs
